# GPTI_Grupo14

./: .env  .gitignore  README.md  example.json  pyproject.toml
src/organizai/: api_app.py  main.py
src/organizai/api/: routes.py
src/organizai/models/: availability.py  task.py
src/organizai/prompts/: scheduler_prompt.txt
src/organizai/services/: gemini_client.py  planner.py
src/organizai/utils/: parser.py  prompt_loader.py
